Update gc-comparison.md